added sshd template, ssh handler and host variables for ssh

--- a/host_vars/centosansiblelab@192.168.0.13.yml
+++ b/host_vars/centosansiblelab@192.168.0.13.yml
@@ -1,3 +1,5 @@
 apache_package_name: httpd
 apache_service: httpd
 php_package_name: php
+ssh_users: "ubuntuansiblelab simone"
+ssh_template: sshd_config_centos.j2
